--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -1,13 +1,7 @@
-/*!
- * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #000;
 }
@@ -147,8 +141,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-    background-color: #000;
+    background-color: #4D4D4D;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -262,15 +255,14 @@ a:focus {
 }
 
 .download-section {
-    width: 100%;
-    padding: 50px 0;
-    color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+	width: 100%;
+	padding: 50px 0;
+	color: #fff;
+	background-color: #4D4D4D;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
 }
 
 #map {
@@ -342,6 +334,7 @@ ul.banner-social-buttons {
 
 footer {
     padding: 50px 0;
+	
 }
 
 footer p {
