--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -30,6 +30,35 @@ p {
     line-height: 1.5;
 }
 
+.portfolio {
+	border: 1px solid #41BCDC;
+	margin: 5px; 
+	padding: 5px; 
+	text-align: left; 
+}
+
+	.portfolio .title {
+		opacity: .8; 
+		margin: 0px;
+		padding: 0px;
+		font-size: 16px;
+		text-align: right !important;
+	}
+
+	.portfolio .image {
+		width: 100%;
+		opacity: .75;
+	    transition: opacity .3s ease-in-out;
+	    -moz-transition: opacity .3s ease-in-out;
+	    -webkit-transition: opacity .3s ease-in-out;
+   	}
+
+	.portfolio .image:hover {
+	    transition: opacity .3s ease-in-out;
+	    -moz-transition: opacity .3s ease-in-out;
+	    -webkit-transition: opacity .3s ease-in-out;
+		opacity: 1;
+	}	
 @media(min-width:768px) {
     p {
         margin: 0 0 35px;
@@ -48,7 +77,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #1d9b6c;
+    color: #41BCDC;
 }
 
 .light {
@@ -263,12 +292,6 @@ a:focus {
 	-moz-background-size: cover;
 	background-size: cover;
 	-o-background-size: cover;
-}
-
-#map {
-    width: 100%;
-    height: 200px;
-    margin-top: 100px;
 }
 
 @media(min-width:767px) {
