--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -30,6 +30,10 @@ p {
     line-height: 1.5;
 }
 
+.hide {
+	display: none;
+}
+
 .portfolio {
 	border: 1px solid #41BCDC;
 	margin: 5px; 
@@ -60,13 +64,19 @@ p {
 	    -webkit-transition: opacity .3s ease-in-out;
 		opacity: 1;
 	}	
+@media(max-width:768px) {
+	.portfolio {
+		width: 100%;
+	}
+}
+
 @media(min-width:768px) {
     p {
         margin: 0 0 35px;
         font-size: 20px;
         line-height: 1.6;
     }
-}
+=}
 
 a {
     color: #42dca3;
@@ -221,21 +231,41 @@ a:focus {
     transition: background .3s ease-in-out;
 }
 
-.btn-circle:hover,
-.btn-circle:focus {
-    outline: 0;
-    color: #fff;
-    background: rgba(255,255,255,.1);
+.btn-circle2 {
+	width: 70px;
+	height: 70px;
+	margin-top: 10px;
+	padding-top: 5px;
+	padding-right: 15px;
+	padding-left: 15px;
+	padding-bottom: 7px;
+	border: 2px solid #fff;
+	border-radius: 100%!important;
+	font-size: 40px;
+	color: #fff;
+	background: 0 0;
+	-webkit-transition: background .3s ease-in-out;
+	-moz-transition: background .3s ease-in-out;
+	transition: background .3s ease-in-out;
 }
 
-.btn-circle i.animated {
+.btn-circle:hover,
+.btn-circle:focus, .btn-circle2:hover,
+.btn-circle2:focus  {
+    outline: 0;
+    color: #41BCDC;
+    background: rgba(255,255,255,.1);
+	border: 2px solid #41BCDC;
+}
+
+.btn-circle i.animated, .btn-circle2 i.animated {
     -webkit-transition-property: -webkit-transform;
     -webkit-transition-duration: 1s;
     -moz-transition-property: -moz-transform;
     -moz-transition-duration: 1s;
 }
 
-.btn-circle:hover i.animated {
+.btn-circle:hover i.animated, .btn-circle2:hover i.animated {
     -webkit-animation-name: pulse;
     -moz-animation-name: pulse;
     -webkit-animation-duration: 1.5s;
