--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -40,10 +40,14 @@ p {
 	padding: 5px; 
 	text-align: left; 
 	width: 30%;
+    color: #ACACAC; 
 }
+    .portfolio strong {
+        color: #41BCDC;
+    }
 
 	.portfolio .title {
-		opacity: .8; 
+		opacity: .65; 
 		margin: 0px;
 		padding: 0px;
 		font-size: 16px;
