--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,43 @@ h6 {
         opacity: 1;
     }
 
+    .portfolioInfo {
+        color: #212121;
+        vertical-align: top;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .portfolioType {
+        font-size: 4em;
+        font-weight: bold;
+        letter-spacing: -6px;
+        color: #B6B6B6;
+        opacity: .4;
+        text-transform: uppercase;
+        display: block;  
+        margin-bottom: -15px;
+    }
+    .portfolioTitle {
+        display: block;
+        font-size: 2em;
+        vertical-align: top;  
+    }
+    .portfolioDesc {
+        vertical-align: bottom;
+        color:#727272;  
+    }
+
+.modalbox {
+    width: 50%;
+    display: inline-block;    
+    padding-left: 5px;
+}
+.modalimg {
+    width:100%;
+    min-width: 200px;
+}    
+
 .noborder {
         border: none !important;
         box-shadow: none !important;
@@ -158,6 +195,7 @@ footer {
 
 .modal-dialog{
         width:80%;
+        vertical-align: top;
 
 }
 
