--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     height: 100%;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #212121;
-    background-color: #fff;
+    background-color: #00BCD4;
 }
 a, a:visited, a:hover, a:active {
     text-decoration:none !important;
@@ -31,6 +31,19 @@ h6 {
     letter-spacing: 1px;
 }
 
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -3em;    
+}
+.center {
+    text-align: center;
+    margin: 0 auto;
+}
+    .g-recaptcha {
+        display: inline-block;
+    }
 #title {
     font-size: 4em; 
     width:100%;
@@ -40,7 +53,9 @@ h6 {
 
 #nav {
     float: left;    
-    width: 200px;
+    width: 185px;
+    background: #fff;
+    z-index: 1;    
 }
 
 #nav ul {
@@ -69,10 +84,10 @@ h6 {
         top:-7px;
     }
     #nav li:hover {
-        margin-left:-20px;
+        margin-left:-25px;
     }
     #nav .active{
-        margin-left:-20px;
+        margin-left:-25px;
         background-color: #00BCD4;
         color: #fff;
    }    
@@ -90,13 +105,14 @@ h6 {
 
 #content{
     background: #00BCD4;
-    float: left;
+    text-align: center;
 };
 
 .panel {
     float: left;
-
+    margin: auto;
     background: #00BCD4 !important;
+    z-index: 5;
 }
 
 .portfolio{
@@ -165,7 +181,32 @@ h6 {
 .modalimg {
     width:100%;
     min-width: 200px;
-}    
+}   
+
+.contact {
+    background-color: #00BCD4;
+    width: 80%;
+    clear: both !important;
+    text-align: center;
+    display:inline-block;
+    color: #ffffff;
+}
+   
+    .contactTitle {
+        font-size: 4em;
+        font-weight: bold;
+        letter-spacing: -6px;
+        color: #ffffff;
+        opacity: .8;
+        text-transform: uppercase;
+        display: block;  
+        margin-bottom: -15px;        
+    }
+
+    .contactForm {
+        margin: auto;
+        max-width: 500px;
+    }
 
 .noborder {
         border: none !important;
@@ -177,8 +218,12 @@ footer {
     clear: both;
     background-color: #0097A7; 
     width: 100%;
+    height: 3em;
 }
 
+.push {
+    height: 3em;
+}
 /* bootstrap alterations */
 .modal-open .modal,.btn:focus, a:focus{
     outline:none!important
@@ -198,6 +243,7 @@ footer {
         vertical-align: top;
 
 }
+
 
 /* mobile */
 @media only screen and (max-width: 480px) {
