--- a/css/style.css
+++ b/css/style.css
@@ -19,16 +19,23 @@ h2 {
   text-transform: uppercase;
   font-weight: bold;
   color: #D8D8D8;
+  transition: color 0.5s ease;
 }
 /* line 28, ../sass/style.scss */
+h2:hover {
+  color: #336699;
+  opacity: 0.6;
+}
+/* line 33, ../sass/style.scss */
 h2::first-letter {
   color: #C0C0C0;
+  opacity: 1 !important;
 }
 
 /* ===========
        IDs 
    =========== */
-/* line 36, ../sass/style.scss */
+/* line 42, ../sass/style.scss */
 footer {
   font-size: .7em;
   height: 2em;
@@ -36,25 +43,25 @@ footer {
   color: #C0C0C0;
 }
 
-/* line 43, ../sass/style.scss */
+/* line 49, ../sass/style.scss */
 #nav a {
   margin-top: -15px;
   color: #336699;
   transition: color 0.5s ease;
 }
-/* line 48, ../sass/style.scss */
+/* line 54, ../sass/style.scss */
 #nav a:hover {
   color: #C0C0C0;
 }
 
-/* line 53, ../sass/style.scss */
+/* line 59, ../sass/style.scss */
 #subtitle {
   text-align: center;
   margin-top: -10px;
   background: #F0F0F0;
 }
 
-/* line 59, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 #title {
   font-size: 2.4em;
   text-align: center;
@@ -65,7 +72,7 @@ footer {
 /* ===========
       class
    =========== */
-/* line 70, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 .active a {
   background: #336699;
   color: #fff !important;
@@ -74,23 +81,23 @@ footer {
   transition: color 0.5s ease;
 }
 
-/* line 80, ../sass/style.scss */
+/* line 86, ../sass/style.scss */
 .center {
   text-align: center;
 }
 
-/* line 84, ../sass/style.scss */
+/* line 90, ../sass/style.scss */
 .navbar {
   background: #F0F0F0;
 }
 
-/* line 88, ../sass/style.scss */
+/* line 94, ../sass/style.scss */
 .pdf {
   padding-left: 20px;
   padding-right: 20px;
   transition: padding 0.5s ease;
 }
-/* line 92, ../sass/style.scss */
+/* line 98, ../sass/style.scss */
 .pdf:hover {
   -webkit-animation: backforth 0.7s infinite alternate;
   -moz-animation: backforth 0.7s infinite alternate;
@@ -98,28 +105,28 @@ footer {
   animation: backforth 0.7s infinite alternate;
 }
 
-/* line 100, ../sass/style.scss */
+/* line 106, ../sass/style.scss */
 .resume {
   text-align: left;
 }
 
-/* line 103, ../sass/style.scss */
+/* line 109, ../sass/style.scss */
 .row {
   padding-left: 0px;
 }
 
-/* line 107, ../sass/style.scss */
+/* line 113, ../sass/style.scss */
 .push {
   height: 0em;
 }
 
-/* line 111, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
 .viewpdf {
   padding-top: 20px;
   text-align: center;
 }
 
-/* line 116, ../sass/style.scss */
+/* line 122, ../sass/style.scss */
 .wrapper {
   min-height: 100%;
   height: auto !important;
