--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,9 +24,15 @@ h2 {
 	text-transform: uppercase;
 	font-weight: bold;
 	color: $color-lighter;
+	transition: color 0.5s ease;
+	&:hover {
+	color: $color-blue;
+	opacity: 0.6;
+	}
 
 	&::first-letter {
-	color: $color-light;		
+	color: $color-light;	
+	opacity: 1 !important;	
 	}
 }
 /* ===========
