--- a/css/style.css
+++ b/css/style.css
@@ -26,16 +26,34 @@ h2:hover {
   color: #336699;
   opacity: 0.6;
 }
-/* line 33, ../sass/style.scss */
+/* line 31, ../sass/style.scss */
+h2:hover::first-letter {
+  color: #336699;
+}
+/* line 36, ../sass/style.scss */
 h2::first-letter {
   color: #C0C0C0;
-  opacity: 1 !important;
+}
+
+/* line 43, ../sass/style.scss */
+h3 {
+  font-family: "Oswald", sans-serif;
+  font-size: 1.3em;
+  line-height: 1.3em;
+  margin-bottom: -3px;
+}
+
+/* line 50, ../sass/style.scss */
+h4 {
+  font-family: "Oswald", sans-serif;
+  font-size: 0.8em;
+  line-height: 0.8em;
 }
 
 /* ===========
        IDs 
    =========== */
-/* line 42, ../sass/style.scss */
+/* line 60, ../sass/style.scss */
 footer {
   font-size: .7em;
   height: 2em;
@@ -43,25 +61,25 @@ footer {
   color: #C0C0C0;
 }
 
-/* line 49, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
 #nav a {
   margin-top: -15px;
   color: #336699;
   transition: color 0.5s ease;
 }
-/* line 54, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 #nav a:hover {
   color: #C0C0C0;
 }
 
-/* line 59, ../sass/style.scss */
+/* line 77, ../sass/style.scss */
 #subtitle {
   text-align: center;
   margin-top: -10px;
   background: #F0F0F0;
 }
 
-/* line 65, ../sass/style.scss */
+/* line 83, ../sass/style.scss */
 #title {
   font-size: 2.4em;
   text-align: center;
@@ -72,7 +90,7 @@ footer {
 /* ===========
       class
    =========== */
-/* line 76, ../sass/style.scss */
+/* line 94, ../sass/style.scss */
 .active a {
   background: #336699;
   color: #fff !important;
@@ -81,23 +99,23 @@ footer {
   transition: color 0.5s ease;
 }
 
-/* line 86, ../sass/style.scss */
+/* line 104, ../sass/style.scss */
 .center {
   text-align: center;
 }
 
-/* line 90, ../sass/style.scss */
+/* line 108, ../sass/style.scss */
 .navbar {
   background: #F0F0F0;
 }
 
-/* line 94, ../sass/style.scss */
+/* line 112, ../sass/style.scss */
 .pdf {
   padding-left: 20px;
   padding-right: 20px;
   transition: padding 0.5s ease;
 }
-/* line 98, ../sass/style.scss */
+/* line 116, ../sass/style.scss */
 .pdf:hover {
   -webkit-animation: backforth 0.7s infinite alternate;
   -moz-animation: backforth 0.7s infinite alternate;
@@ -105,28 +123,28 @@ footer {
   animation: backforth 0.7s infinite alternate;
 }
 
-/* line 106, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 .resume {
   text-align: left;
 }
 
-/* line 109, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 .row {
   padding-left: 0px;
 }
 
-/* line 113, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 .push {
   height: 0em;
 }
 
-/* line 117, ../sass/style.scss */
+/* line 135, ../sass/style.scss */
 .viewpdf {
   padding-top: 20px;
   text-align: center;
 }
 
-/* line 122, ../sass/style.scss */
+/* line 140, ../sass/style.scss */
 .wrapper {
   min-height: 100%;
   height: auto !important;
