--- a/sass/style.scss
+++ b/sass/style.scss
@@ -149,7 +149,13 @@ footer {
 
 .portfolioImg {
 	max-width: 400px; 
-	padding-top: 5px; 
+	padding-top: 5px; 	
+	opacity: .7; 
+	transition: 0.5s ease;
+
+	&:hover {
+		opacity: 1; 
+	}
 }
 
 .push {
