--- a/css/style.css
+++ b/css/style.css
@@ -90,16 +90,15 @@ footer {
 
 /* line 93, ../sass/style.scss */
 #title {
-  font-size: 2.4em;
+  font-size: 2.5em;
   text-align: center;
   padding-top: 120px;
-  background: #F0F0F0;
 }
 
 /* ===========
       class
    =========== */
-/* line 104, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 .active a {
   background: #336699;
   color: #fff !important;
@@ -108,75 +107,133 @@ footer {
   transition: color 0.5s ease;
 }
 
-/* line 114, ../sass/style.scss */
+/* line 112, ../sass/style.scss */
 .center {
   text-align: center;
 }
 
-/* line 118, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
+.contact p {
+  padding-top: 10px;
+  padding-bottom: 0px;
+  font-size: 1em;
+}
+
+/* line 124, ../sass/style.scss */
+.icon {
+  width: 50px;
+  padding-bottom: 5px;
+  opacity: 0.7;
+  transition: 0.5s ease;
+}
+/* line 130, ../sass/style.scss */
+.icon:hover {
+  opacity: 1;
+}
+
+/* line 135, ../sass/style.scss */
+.links {
+  color: #C0C0C0;
+  vertical-align: center;
+}
+/* line 139, ../sass/style.scss */
+.links a {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.8em;
+  margin-bottom: -2px;
+  transition: 0.5s ease;
+  display: inline-block;
+  width: 100px;
+  max-height: 50px;
+  vertical-align: center;
+}
+/* line 150, ../sass/style.scss */
+.links a.title {
+  display: none;
+}
+/* line 152, ../sass/style.scss */
+.links a:hover {
+  color: #538cc6;
+  transition: 0.5s ease;
+}
+/* line 156, ../sass/style.scss */
+.links a:hover.title {
+  display: none;
+}
+/* line 160, ../sass/style.scss */
+.links:hover {
+  position: relative;
+}
+
+/* line 166, ../sass/style.scss */
 .navbar {
   background: #F0F0F0;
 }
 
-/* line 122, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 .pdf {
-  padding-left: 20px;
-  padding-right: 20px;
-  transition: padding 0.5s ease;
+  margin-left: 20px;
+  margin-right: 20px;
+  transition: 0.5s ease;
+  border: #336699 1px solid;
+  padding: 10px;
 }
-/* line 126, ../sass/style.scss */
+/* line 177, ../sass/style.scss */
 .pdf:hover {
+  color: #fff;
+  background: #336699;
   -webkit-animation: backforth 0.7s infinite alternate;
   -moz-animation: backforth 0.7s infinite alternate;
   -o-animation: backforth 0.7s infinite alternate;
   animation: backforth 0.7s infinite alternate;
 }
 
-/* line 134, ../sass/style.scss */
+/* line 187, ../sass/style.scss */
 .resume {
   text-align: left;
 }
 
-/* line 137, ../sass/style.scss */
+/* line 190, ../sass/style.scss */
 .row {
   padding-left: 0px;
 }
 
-/* line 141, ../sass/style.scss */
+/* line 194, ../sass/style.scss */
 .option {
   color: #C0C0C0;
   font-size: 1em;
 }
 
-/* line 146, ../sass/style.scss */
+/* line 199, ../sass/style.scss */
 .portfolioItem {
   display: inline;
 }
 
-/* line 150, ../sass/style.scss */
+/* line 203, ../sass/style.scss */
 .portfolioImg {
   max-width: 400px;
   padding-top: 5px;
   opacity: .7;
   transition: 0.5s ease;
 }
-/* line 156, ../sass/style.scss */
+/* line 209, ../sass/style.scss */
 .portfolioImg:hover {
   opacity: 1;
 }
 
-/* line 161, ../sass/style.scss */
+/* line 214, ../sass/style.scss */
 .push {
   height: 4em;
 }
 
-/* line 165, ../sass/style.scss */
+/* line 218, ../sass/style.scss */
 .viewpdf {
   padding-top: 20px;
   text-align: center;
 }
 
-/* line 170, ../sass/style.scss */
+/* line 223, ../sass/style.scss */
 .wrapper {
   min-height: 100%;
   height: auto !important;
@@ -188,7 +245,17 @@ footer {
     small screen
    ============= */
 @media only screen and (max-width: 40em) {
-  /* line 181, ../sass/style.scss */
+  /* line 234, ../sass/style.scss */
+  h3 {
+    font-size: 1.1em;
+  }
+
+  /* line 237, ../sass/style.scss */
+  .navi {
+    font-size: 0.8em;
+  }
+
+  /* line 240, ../sass/style.scss */
   .portfolioImg {
     max-width: 100%;
   }
@@ -197,48 +264,48 @@ footer {
     large screen
    ============= */
 @media only screen and (min-width: 64.063em) {
-  /* line 190, ../sass/style.scss */
+  /* line 249, ../sass/style.scss */
   .largecenter {
     text-align: center;
   }
 }
 @-webkit-keyframes backforth {
   0% {
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   100% {
-    padding-left: 0px;
-    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 }
 @-moz-keyframes backforth {
   0% {
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   100% {
-    padding-left: 0px;
-    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 }
 @-o-keyframes backforth {
   0% {
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   100% {
-    padding-left: 0px;
-    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 }
 @keyframes backforth {
   0% {
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   100% {
-    padding-left: 0px;
-    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
 }
