--- a/sass/style.scss
+++ b/sass/style.scss
@@ -91,10 +91,9 @@ footer {
 }
 
 #title {
-	font-size: 2.4em; 
+	font-size: 2.5em; 
 	text-align: center; 
 	padding-top: 120px; 
-	background: $color-lightest;
 }
 
 /* ===========
@@ -107,7 +106,6 @@ footer {
 	width: 100%; 
 	height: 100%; 
 	transition: color 0.5s ease;
-
 }
 
 
@@ -115,19 +113,74 @@ footer {
 	text-align: center; 
 }
 
+.contact {
+	p {
+		padding-top: 10px; 
+		padding-bottom: 0px; 
+		font-size: 1em; 
+	}
+}
+
+.icon {
+	width: 50px; 
+	padding-bottom: 5px; 
+	opacity: 0.7;
+	transition: 0.5s ease;		
+
+	&:hover {
+		opacity: 1; 
+	}
+}
+
+.links  {
+
+	color: $color-light; 
+	vertical-align: center;
+	a {
+		text-transform: uppercase;
+		font-weight: bold; 
+		font-size: 0.8em; 
+		margin-bottom: -2px; 
+		transition: 0.5s ease;
+		display: inline-block;
+		width: 100px; 
+		max-height: 50px; 
+		vertical-align: center;
+
+		&.title { display:none;}
+
+		&:hover {
+		
+			color: $color-lightblue;
+			transition: 0.5s ease;		
+			&.title { display:none;}		
+		}
+	}
+
+	&:hover {
+			position: relative;
+
+		}
+}
+
 .navbar {
 	background: $color-lightest; 
 }
 
 .pdf {
-	padding-left: 20px; 
-	padding-right: 20px;
-	transition: padding 0.5s ease;
+	margin-left: 20px; 
+	margin-right: 20px;
+	transition: 0.5s ease;
+	border: $color-blue 1px solid;
+	padding: 10px; 
+
 	&:hover {
-	  -webkit-animation: backforth 0.7s infinite alternate; 
-	  -moz-animation:    backforth 0.7s infinite alternate; 
-	  -o-animation:      backforth 0.7s infinite alternate; 
-	  animation:         backforth 0.7s infinite alternate; 
+		color: $color-white; 
+		background: $color-blue; 
+		-webkit-animation: backforth 0.7s infinite alternate; 
+		-moz-animation:    backforth 0.7s infinite alternate; 
+		-o-animation:      backforth 0.7s infinite alternate; 
+		animation:         backforth 0.7s infinite alternate; 
 	}
 }
 
@@ -178,6 +231,12 @@ footer {
     small screen
    ============= */
 @media only screen and (max-width: 40em) { 
+	h3 {
+		font-size: 1.1em; 
+	}
+	.navi {
+		font-size: 0.8em; 
+	}
 	.portfolioImg {
 		max-width: 100%; 
 	}
@@ -194,26 +253,26 @@ footer {
 
 
  @-webkit-keyframes backforth {
-  0%   { padding-left: 20px; 
-		padding-right: 20px; }
-  100%   { padding-left: 0px; 
-		padding-right: 0px; }
+  0%   { margin-left: 20px; 
+		margin-right: 20px; }
+  100%   { margin-left: 0px; 
+		margin-right: 0px; }
 }
 @-moz-keyframes backforth {
-  0%   { padding-left: 20px; 
-		padding-right: 20px; }
-  100%   { padding-left: 0px; 
-		padding-right: 0px; }
+  0%   { margin-left: 20px; 
+		margin-right: 20px; }
+  100%   { margin-left: 0px; 
+		margin-right: 0px; }
 }
 @-o-keyframes backforth {
-  0%   { padding-left: 20px; 
-		padding-right: 20px; }
-  100%   { padding-left: 0px; 
-		padding-right: 0px; }
+  0%   { margin-left: 20px; 
+		margin-right: 20px; }
+  100%   { margin-left: 0px; 
+		margin-right: 0px; }
 }
 @keyframes backforth {
-  0%   { padding-left: 20px; 
-		padding-right: 20px; }
-  100%   { padding-left: 0px; 
-		padding-right: 0px; }
+  0%   { margin-left: 20px; 
+		margin-right: 20px; }
+  100%   { margin-left: 0px; 
+		margin-right: 0px; }
 }
