Updated online resume section

--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,21 @@ h4 {
 }
 
 /* line 60, ../sass/style.scss */
+h5 {
+  font-family: "Oswald", sans-serif;
+  font-size: 0.8em;
+  line-height: 1em;
+  color: #336699;
+}
+
+/* line 67, ../sass/style.scss */
 p {
   font-family: "Oswald", sans-serif;
   font-size: 0.7em;
   color: #333333;
 }
 
-/* line 66, ../sass/style.scss */
+/* line 73, ../sass/style.scss */
 hr {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -68,7 +76,7 @@ hr {
 /* ===========
        IDs 
    =========== */
-/* line 75, ../sass/style.scss */
+/* line 82, ../sass/style.scss */
 footer {
   font-size: .7em;
   height: 2em;
@@ -76,25 +84,25 @@ footer {
   color: #C0C0C0;
 }
 
-/* line 82, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
 #nav a {
   margin-top: -15px;
   color: #336699;
   transition: color 0.5s ease;
 }
-/* line 87, ../sass/style.scss */
+/* line 94, ../sass/style.scss */
 #nav a:hover {
   color: #C0C0C0;
 }
 
-/* line 92, ../sass/style.scss */
+/* line 99, ../sass/style.scss */
 #subtitle {
   text-align: center;
   margin-top: -10px;
   background: #F0F0F0;
 }
 
-/* line 98, ../sass/style.scss */
+/* line 105, ../sass/style.scss */
 #title {
   font-size: 2.5em;
   text-align: center;
@@ -104,7 +112,7 @@ footer {
 /* ===========
       class
    =========== */
-/* line 108, ../sass/style.scss */
+/* line 115, ../sass/style.scss */
 .active a {
   background: #336699;
   color: #fff !important;
@@ -113,46 +121,46 @@ footer {
   transition: color 0.5s ease;
 }
 
-/* line 117, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 .center {
   text-align: center;
 }
 
-/* line 122, ../sass/style.scss */
+/* line 129, ../sass/style.scss */
 .contact p {
   padding-top: 10px;
   padding-bottom: 0px;
   font-size: 1em;
 }
 
-/* line 129, ../sass/style.scss */
+/* line 136, ../sass/style.scss */
 .info {
   font-size: 0.7em !important;
 }
 
-/* line 133, ../sass/style.scss */
+/* line 140, ../sass/style.scss */
 .icon {
   width: 50px;
   padding-bottom: 5px;
   opacity: 0.7;
   transition: 0.5s ease;
 }
-/* line 139, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 .icon:hover {
   opacity: 1;
 }
 
-/* line 144, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 .left {
   text-align: left;
 }
 
-/* line 148, ../sass/style.scss */
+/* line 155, ../sass/style.scss */
 .links {
   color: #C0C0C0;
   vertical-align: center;
 }
-/* line 152, ../sass/style.scss */
+/* line 159, ../sass/style.scss */
 .links a {
   text-transform: uppercase;
   font-weight: bold;
@@ -164,30 +172,30 @@ footer {
   max-height: 50px;
   vertical-align: center;
 }
-/* line 163, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 .links a.title {
   display: none;
 }
-/* line 165, ../sass/style.scss */
+/* line 172, ../sass/style.scss */
 .links a:hover {
   color: #538cc6;
   transition: 0.5s ease;
 }
-/* line 169, ../sass/style.scss */
+/* line 176, ../sass/style.scss */
 .links a:hover.title {
   display: none;
 }
-/* line 173, ../sass/style.scss */
+/* line 180, ../sass/style.scss */
 .links:hover {
   position: relative;
 }
 
-/* line 179, ../sass/style.scss */
+/* line 186, ../sass/style.scss */
 .navbar {
   background: #F0F0F0;
 }
 
-/* line 183, ../sass/style.scss */
+/* line 190, ../sass/style.scss */
 .pdf {
   margin-left: 20px;
   margin-right: 20px;
@@ -195,7 +203,7 @@ footer {
   border: #336699 1px solid;
   padding: 10px;
 }
-/* line 190, ../sass/style.scss */
+/* line 197, ../sass/style.scss */
 .pdf:hover {
   color: #fff;
   background: #336699;
@@ -205,51 +213,51 @@ footer {
   animation: backforth 0.7s infinite alternate;
 }
 
-/* line 200, ../sass/style.scss */
+/* line 207, ../sass/style.scss */
 .resume {
   text-align: left;
 }
 
-/* line 203, ../sass/style.scss */
+/* line 210, ../sass/style.scss */
 .row {
   padding-left: 0px;
 }
 
-/* line 207, ../sass/style.scss */
+/* line 214, ../sass/style.scss */
 .option {
   color: #C0C0C0;
   font-size: 1em;
 }
 
-/* line 212, ../sass/style.scss */
+/* line 219, ../sass/style.scss */
 .portfolioItem {
   display: inline;
 }
 
-/* line 216, ../sass/style.scss */
+/* line 223, ../sass/style.scss */
 .portfolioImg {
   max-width: 400px;
   padding-top: 5px;
   opacity: .7;
   transition: 0.5s ease;
 }
-/* line 222, ../sass/style.scss */
+/* line 229, ../sass/style.scss */
 .portfolioImg:hover {
   opacity: 1;
 }
 
-/* line 227, ../sass/style.scss */
+/* line 234, ../sass/style.scss */
 .push {
   height: 4em;
 }
 
-/* line 231, ../sass/style.scss */
+/* line 238, ../sass/style.scss */
 .viewpdf {
   padding-top: 20px;
   text-align: center;
 }
 
-/* line 236, ../sass/style.scss */
+/* line 243, ../sass/style.scss */
 .wrapper {
   min-height: 100%;
   height: auto !important;
@@ -261,17 +269,17 @@ footer {
     small screen
    ============= */
 @media only screen and (max-width: 40em) {
-  /* line 247, ../sass/style.scss */
+  /* line 254, ../sass/style.scss */
   h3 {
     font-size: 1.1em;
   }
 
-  /* line 250, ../sass/style.scss */
+  /* line 257, ../sass/style.scss */
   .navi {
     font-size: 0.8em;
   }
 
-  /* line 253, ../sass/style.scss */
+  /* line 260, ../sass/style.scss */
   .portfolioImg {
     max-width: 100%;
   }
@@ -280,7 +288,7 @@ footer {
     large screen
    ============= */
 @media only screen and (min-width: 64.063em) {
-  /* line 262, ../sass/style.scss */
+  /* line 269, ../sass/style.scss */
   .largecenter {
     text-align: center;
   }
