--- a/sass/style.scss
+++ b/sass/style.scss
@@ -57,6 +57,13 @@ h4 {
 	color: $color-dark;
 }
 
+h5 {
+	font-family: $font; 
+	font-size: 0.8em;
+	line-height: 1em;
+	color: $color-blue;
+}
+
 p {
 	font-family: $font; 
 	font-size: 0.7em;
