--- a/css/style.css
+++ b/css/style.css
@@ -133,21 +133,21 @@ footer {
   font-size: 1em;
 }
 
-/* line 136, ../sass/style.scss */
-.info {
-  font-size: 0.7em !important;
-}
-
-/* line 140, ../sass/style.scss */
+/* line 135, ../sass/style.scss */
 .icon {
   width: 50px;
   padding-bottom: 5px;
   opacity: 0.7;
   transition: 0.5s ease;
 }
-/* line 146, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 .icon:hover {
   opacity: 1;
+}
+
+/* line 146, ../sass/style.scss */
+.info {
+  font-size: 0.7em !important;
 }
 
 /* line 151, ../sass/style.scss */
@@ -246,18 +246,29 @@ footer {
   opacity: 1;
 }
 
-/* line 234, ../sass/style.scss */
+/* line 235, ../sass/style.scss */
+.projectsImg {
+  width: 100px;
+  opacity: .7;
+  transition: 0.5s ease;
+}
+/* line 240, ../sass/style.scss */
+.projectsImg:hover {
+  opacity: 1;
+}
+
+/* line 244, ../sass/style.scss */
 .push {
   height: 4em;
 }
 
-/* line 238, ../sass/style.scss */
+/* line 248, ../sass/style.scss */
 .viewpdf {
   padding-top: 20px;
   text-align: center;
 }
 
-/* line 243, ../sass/style.scss */
+/* line 253, ../sass/style.scss */
 .wrapper {
   min-height: 100%;
   height: auto !important;
@@ -269,17 +280,17 @@ footer {
     small screen
    ============= */
 @media only screen and (max-width: 40em) {
-  /* line 254, ../sass/style.scss */
+  /* line 264, ../sass/style.scss */
   h3 {
     font-size: 1.1em;
   }
 
-  /* line 257, ../sass/style.scss */
+  /* line 267, ../sass/style.scss */
   .navi {
     font-size: 0.8em;
   }
 
-  /* line 260, ../sass/style.scss */
+  /* line 270, ../sass/style.scss */
   .portfolioImg {
     max-width: 100%;
   }
@@ -288,7 +299,7 @@ footer {
     large screen
    ============= */
 @media only screen and (min-width: 64.063em) {
-  /* line 269, ../sass/style.scss */
+  /* line 279, ../sass/style.scss */
   .largecenter {
     text-align: center;
   }
