--- a/main.scss
+++ b/main.scss
@@ -98,6 +98,8 @@ md-tooltip {
   border: 3px white solid;
   margin: 2px 2px 15px 2px !important; 
   padding-top: 8px; 
+  padding-right: 3px !important; 
+  padding-left: 3px !important; 
   color: #E1BEE7; 
   transition: ease 0.5s; 
 
