--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,6 @@
 $gradient1 : #311B92;
 $gradient2: #880E4F;
+$text: #212121;
 
 html, body {
     width:100%;
@@ -13,7 +14,7 @@ html, body {
 body{
   font-family: 'Oswald', sans-serif;
   text-align: center;
-  color: #311B92;
+  color: $gradient1;
   margin: 0;
   padding: 0px; 
   font-size: 1em;
@@ -65,6 +66,8 @@ h5 {
   margin: 0px; 
 }
 
+
+
 md-content {
   background: none; 
 }
@@ -86,6 +89,29 @@ md-tooltip {
 
 .center {
   text-align: center !important;
+}
+
+.modal {
+
+  text-align: left; 
+  color: $text;
+
+  .heading {
+    font-size: 1.8em;
+    font-weight: 300;   
+    color: $gradient1;  
+  }
+
+  .img {
+    width: 90%;
+  }
+
+    .small {
+      width: 50%;
+    }
+    .xsmall {
+      width: 40%;
+    }
 }
 
 .item {
