--- a/main.scss
+++ b/main.scss
@@ -104,6 +104,7 @@ md-tooltip {
 
   .img {
     width: 90%;
+    z-index: 1;
   }
 
     .small {
@@ -161,6 +162,36 @@ md-tooltip {
 
 .cred {
   width: 500px; 
+}
+
+.portfolio {
+  padding-top: 10px; 
+  padding-bottom: 0px;
+  background-color: #fff;
+
+  &:hover {
+  background-color: #fff;
+  } 
+
+}
+
+.ptext{
+  position: absolute;
+  width: 288px;
+  height: 116px;
+  text-align: center;
+  padding-top: 100px; 
+  color: #fff;
+  opacity: 1;
+  font-size: 1.4em;
+  background-color: rgba(98,50,128,.8);
+}
+
+.pwrap {
+    position: relative;
+    padding: 0;
+    width: 100%;
+    display:block;
 }
 
 
